Added summary of week 1

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Basic
 title: Navy Xie's Blog
-subtitle: Full-stack developer, experienced on iOS development, currently researching in AI area
+subtitle: We are all in the gutter, but some of us are looking at the stars.
 welcome_message: Welcome to my blog
-description: 
+description: Full-stack developer, experienced on iOS development, currently researching in AI area
 creator: <a href="https://navy-xie.github.io">Navy Xie</a>
 
 url: "https://navy-xie.github.io"
