Updated the config file to use the new domain

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@ title: Navy Xie's Blog
 subtitle: We are all in the gutter, but some of us are looking at the stars.
 welcome_message: Welcome to my blog
 description: Full-stack developer, experienced on iOS development, currently researching in AI area
-creator: <a href="https://navy-xie.github.io">Navy Xie</a>
+creator: <a href="https://www.navyxie.cn">Navy Xie</a>
 
-url: "https://navy-xie.github.io"
+url: "https://www.navyxie.cn"
 
 permalink: /:year/:month/:title/
 
