--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic
 title: Navy Xie's Blog
-subtitle: We are all in the gutter, but some of us are looking at the stars.
+subtitle: Yesterday is history, tomorrow is a mystery, but today is a gift. That's why it's called the present.
 welcome_message: Welcome to my blog
 description: Full-stack developer, experienced on iOS development, currently researching in AI area
 creator: <a href="https://www.navyxie.cn">Navy Xie</a>
